@@ -6,47 +6,30 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
-import org.springframework.security.oauth2.client.registration.ClientRegistration;
-import org.springframework.security.oauth2.client.registration.InMemoryReactiveClientRegistrationRepository;
 import org.springframework.security.oauth2.client.registration.ReactiveClientRegistrationRepository;
 import org.springframework.security.oauth2.client.web.server.DefaultServerOAuth2AuthorizationRequestResolver;
 import org.springframework.security.oauth2.client.web.server.ServerOAuth2AuthorizationRequestResolver;
-import org.springframework.security.oauth2.core.AuthorizationGrantType;
 import org.springframework.security.web.server.SecurityWebFilterChain;
 import org.springframework.security.web.server.context.NoOpServerSecurityContextRepository;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
-import store.ggun.gateway.handler.CustomAuthenicationFailureHandler;
 import store.ggun.gateway.handler.CustomAuthenticationSuccessHandler;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebFluxSecurity
 @RequiredArgsConstructor
 public class WebSecurityConfig {
-    private final CustomAuthenticationSuccessHandler customAuthenticationSuccessHandler;
-    private final CustomAuthenicationFailureHandler customAuthenicationFailureHandler;
-    @Bean
-    public ReactiveClientRegistrationRepository reactiveClientRegistrationRepository() {
-        ClientRegistration registration = ClientRegistration.withRegistrationId("my-client")
-                .clientId("your-client-id")
-                .clientSecret("your-client-secret")
-                .scope("read", "write")
-                .authorizationUri("http://example.com/oauth/authorize")
-                .tokenUri("http://example.com/oauth/token")
-                .userInfoUri("http://example.com/userinfo")
-                .redirectUri("http://localhost:8080/login/oauth2/code/my-client")
-                .authorizationGrantType(AuthorizationGrantType.AUTHORIZATION_CODE)
-                .build();
 
-        return new InMemoryReactiveClientRegistrationRepository(registration);
-    }
+    private final CustomAuthenticationSuccessHandler customAuthenticationSuccessHandler;
+    private final ReactiveClientRegistrationRepository reactiveClientRegistrationRepository;
 
     @Bean
     public ServerOAuth2AuthorizationRequestResolver serverOAuth2AuthorizationRequestResolver() {
-        return new DefaultServerOAuth2AuthorizationRequestResolver(reactiveClientRegistrationRepository());
+        return new DefaultServerOAuth2AuthorizationRequestResolver(reactiveClientRegistrationRepository);
     }
 
 
@@ -56,28 +39,28 @@ public class WebSecurityConfig {
                 .authorizeExchange(authorize ->
                         authorize.anyExchange().permitAll()
                 )
-                .cors(i -> i.configurationSource(configurationSource()))
                 .securityContextRepository(NoOpServerSecurityContextRepository.getInstance())
-                .httpBasic(i -> i.disable())
-                .csrf(i -> i.disable())
-                .formLogin(i -> i.disable())
+                .httpBasic(ServerHttpSecurity.HttpBasicSpec::disable)
+                .csrf(ServerHttpSecurity.CsrfSpec::disable)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // CORS 활성화 및 설정 적용
+                .formLogin(ServerHttpSecurity.FormLoginSpec::disable)
                 .oauth2Login(oauth -> oauth
                         .authorizationRequestResolver(serverOAuth2AuthorizationRequestResolver())
                         .authenticationSuccessHandler(customAuthenticationSuccessHandler)
-                        .authenticationFailureHandler(customAuthenicationFailureHandler)
                 )
                 .build();
     }
+
     @Bean
-    public CorsConfigurationSource configurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(List.of("http://localhost:3000", "http://ggun.store"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true);
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOriginPatterns(List.of("http://localhost:3000")); // allowedOriginPatterns 사용
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
